docker/k8s/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    component: web
spec:
  containers:
    - name: nginx-cont
      image: mo29172/unionista_nginx
      ports:
        - containerPort: 3000
