docker/k8s/nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  ports: 
    - port: 3050
      targetPort: 80
      nodePort: 31515
  selector: 
    component: nginx
